--- a/bibliography.bib
+++ b/bibliography.bib
@@ -16,6 +16,28 @@
     urldate       =   {2022-08-30},
   }
   
+  
+@book{sdg20,
+    title         =   {The Sustainable Development Goals Report 2020},
+    author        =   {{United Nations: Department of Economic {and} Social Affairs}},
+    year          =   {2020},
+    publisher     =   {{United Nations}},
+    address       =   {{New York, NY}},
+    isbn          =   {978-92-1-101425-9},
+  }
+
+@legal{sdg,
+  entrysubtype    = {piltreaty},
+  title           = {Transforming our world : the 2030 Agenda for Sustainable Development},
+  execution       = {adopted=2015-10-21},
+  pagination      = {article},
+  url             = {https://www.un.org/en/development/desa/population/migration/generalassembly/docs/globalcompact/A_RES_70_1_E.pdf},
+  urldate         = {2022-11-02},
+  author          = {{UN General Assembly}}
+}
+
+
+  
 
 @online{nksstats,
     author        = {{Karolinska University Hospital}},
